feat: health controller
